Fixes visibility of controlbar in PC mode

--- a/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
+++ b/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
@@ -242,6 +242,8 @@ yt-player {
 }
 
 yt-controlbar {
+    display: none;
+
     .controlbar-overlay {
         width: 1920px;
         height: 400px;
@@ -351,6 +353,10 @@ yt-controlbar {
         position: relative;
         margin: 0 !important;
         padding: 0 !important;
+    }
+
+    yt-controlbar {
+        display: block;
     }
 
     .yt-viewer {
